# soulslike

./: .clang-format  .clangd  CMakeLists.txt
assets/shaders/: Basic.frag  Basic.vert
src/: main.cxx
