cmake_minimum_required(VERSION 3.10)
project(SoulsLike CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/*.cxx)
add_executable(SoulsLike ${SOURCES})
target_include_directories(SoulsLike PRIVATE ${CMAKE_SOURCE_DIR})

add_subdirectory(Penguine)
target_link_libraries(SoulsLike PRIVATE Penguine)

set(CMAKE_BUILD_TYPE Debug)